# dppo

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  dppo_full.yaml  dppo_topk.yaml  grpo.yaml  ppo.yaml  smoke.yaml
data/processed/: gsm8k_eval_100_42.jsonl  gsm8k_train_400_42.jsonl
dppo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dppo/algos/: divergence.py  dppo_loss.py  grpo_loss.py  ppo_loss.py
dppo/data/: gsm8k.py
dppo/models/: load_model.py
dppo/rewards/: gsm8k_reward.py
dppo/trainers/: dppo_trainer.py  grpo_trainer.py  ppo_trainer.py
dppo/utils/: extract_answer.py  generation.py  hub.py  logging.py  seed.py  system.py  timer.py
outputs/dppo_full/: eval_metrics.csv  eval_metrics.jsonl  train_metrics.csv  train_metrics.jsonl
outputs/dppo_full/final_model/: generation_config.json
outputs/dppo_full_eval/: eval_metrics.csv  eval_metrics.jsonl
outputs/dppo_topk/: eval_metrics.csv  eval_metrics.jsonl  train_metrics.csv  train_metrics.jsonl
outputs/dppo_topk_eval/: eval_metrics.csv  eval_metrics.jsonl
outputs/grpo/: eval_metrics.csv  eval_metrics.jsonl  train_metrics.csv  train_metrics.jsonl
outputs/grpo_eval/: eval_metrics.csv  eval_metrics.jsonl
outputs/ppo/: eval_metrics.csv  eval_metrics.jsonl  train_metrics.csv  train_metrics.jsonl
outputs/ppo_eval/: eval_metrics.csv  eval_metrics.jsonl
scripts/: clean_outputs.py  eval_model.py  plot_results.py  prepare_gsm8k.py  publish_model_card.py  pull_model.py  run_all_5hr.sh  run_train_eval_publish.sh  train_dppo.py  train_grpo.py  train_ppo.py
(+20 files in other folders)
